Fix squished login image on login as well

--- a/core/static/core/css/account.css
+++ b/core/static/core/css/account.css
@@ -29,6 +29,9 @@ select {
 .graphic {
     background-size: cover;
     background-position: center center;
+}
+
+.account-art{
     object-fit: none;
 }
 
